--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 build = "src/build.rs"
 description = "a cute metasearch engine"
 license = "CC0-1.0"
-repository = "https://github.com/mat-1/metasearch2"
+repository = "https://github.com/mudkipdev/metasearch"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
